# NeuralNetwork

./: CMakeLists.txt  Datasets.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md
data/Handwritten Math Symbols/: metadata.json
